# llm_bridge

./: .gitignore  CHANGELOG.md  CITATION.cff  CODEOWNERS  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  pyproject.toml
.cla-signatures/v1/: cla.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  cla.yml  codeql.yml  dep-scan.yml  license-check.yml  pattern-check.yml  release.yml  scorecard.yml
examples/: bedrock_example.py  callable_example.py  deepseek_example.py  flask_microservice.py  google_example.py  mock_example.py  openai_example.py  qwen_example.py  requirements.txt
scripts/: check_no_required_deps.py
src/llm_bridge/: __init__.py  base.py  registry.py
src/llm_bridge/providers/: __init__.py  bedrock.py  callable_provider.py  deepseek.py  google_genai.py  mock.py  openai_sdk.py  qwen.py
tests/: test_base.py  test_cloud_providers.py  test_providers.py  test_registry.py
